# HorizonEngine2D

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FILEDIALOGS.ipch  GameEngine.sln  LICENSE  README.md  vcpkg.json
HorizonEditor/: CMakeLists.txt  premake5.lua
HorizonEditor/ScriptCoreLib/: ScriptCoreLib.csproj  ScriptCoreLib.sln
HorizonEditor/ScriptCoreLib/Source/: Camera.cs  Core.cs  Input.cs  InternalCalls.cs  KeyCode.cs  Player.cs  Vector2.cs
HorizonEditor/ScriptCoreLib/Source/Core/: Input.cs  InternalCalls.cs  KeyCode.cs  Main.cs
HorizonEditor/ScriptCoreLib/Source/ECS/: Components.cs  GameObject.cs  Scene.cs
HorizonEditor/ScriptCoreLib/Source/Math/: Vector2.cs  Vector3.cs  Vector4.cs
HorizonEditor/ScriptCoreLib/Source/Scene/: GameObject.cs
HorizonEditor/icons/: HorizonGameEngine.rc  HorizonGameEngine.res
HorizonEditor/include/: ComponentDisplays.h  ContentBrowser.h  EditorLayer.h  Modals.h  NodeEditor.h
HorizonEditor/scenes/: custom_scene.json
HorizonEditor/src/: EditorLayer.cpp  Main.cpp  pch.h
HorizonEditor/src/ContentBrowser/: ContentBrowser.cpp
HorizonEditor/src/Modals/: Modals.cpp
HorizonEditor/src/NodeEditor/: NodeEditor.cpp
HorizonEditor/utils/: premake5.lua
HorizonEngine/: CMakeLists.txt  HorizonEngine.cpp  HorizonEngine.h  core.h  pch.h
HorizonEngine/HorizonEngine/: Window.cpp  Window.h
HorizonEngine/Platform/OpenGL/: FDWindows.cpp  FDWindows.h  GLBuffer.cpp  GLBuffer.h  GLContext.cpp  GLContext.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLInput.cpp  GLInput.h  GLRenderer.h  GLRendererAPI.cpp  GLRendererAPI.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h  GLWindow.cpp  GLWindow.h
HorizonEngine/Platform/Windows/: FDWindows.cpp  FDWindows.h  GLContext.cpp  GLShader.cpp  GLShader.h  MSInput.cpp  MSInput.h  MSWindow.cpp  MSWindow.h
HorizonEngine/api_assets/shaders/: Fragment.glsl  TextureFragment.glsl  TextureVertex.glsl
HorizonEngine/include/HorizonEngine/: HorizonEngine.h  HznEntryPoint.h
HorizonEngine/include/HorizonEngine/AssetManagement/: AssetManager.h
HorizonEngine/include/HorizonEngine/Camera/: Camera.h  CameraController.h
HorizonEngine/include/HorizonEngine/Codes/: KeyboardCodes.h  MouseCodes.h
HorizonEngine/include/HorizonEngine/Core/: App.h  Core.h  Input.h  Layer.h  LayerStack.h  TimeStep.h  Window.h
HorizonEngine/include/HorizonEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
HorizonEngine/include/HorizonEngine/ImGui/: ImguiLayer.h
HorizonEngine/include/HorizonEngine/Logging/: Logging.h
HorizonEngine/include/HorizonEngine/Platform/: FileDialogs.h
HorizonEngine/include/HorizonEngine/Project/: Project.h  ProjectManager.h
HorizonEngine/include/HorizonEngine/Renderer/: Buffer.h  Framebuffer.h  RenderCall.h  RenderContext.h  Renderer.h  Renderer2D.h  Renderer3D.h  RendererAPI.h  Shader.h  Sprite.h  Texture.h  VertexArray.h
HorizonEngine/include/HorizonEngine/Scene/: Component.h  GameObject.h  Scene.h  SceneManager.h
HorizonEngine/include/HorizonEngine/Scripting/: ScriptEngine.h
HorizonEngine/platform/windows/: MSWindow.cpp  MSWindow.h
HorizonEngine/src/: pch.h
HorizonEngine/src/HorizonEngine/: APIMacros.h  App.cpp  App.h  Camera.cpp  Camera.h  EntryPoint.h  FileManager.cpp  FileManager.h  GameObject.cpp  GameObject.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Window.cpp  Window.h  gameObject.cpp  gameObject.h  test.txt
HorizonEngine/src/HorizonEngine/AssetManagement/: AssetManager.cpp  AssetManager.h
HorizonEngine/src/HorizonEngine/Audio/: AudioPlayer.cpp  AudioPlayer.h  AudioSource.cpp  AudioSource.h  SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h  SoundPlayer.cpp  SoundPlayer.h  SoundSource.cpp  SoundSource.h
HorizonEngine/src/HorizonEngine/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h
HorizonEngine/src/HorizonEngine/Codes/: KeyboardCodes.h  MouseCodes.h
HorizonEngine/src/HorizonEngine/Components/: Component.cpp  Component.h  ComponentFactory.h  ComponentType.h  PhysicsComponent.h  Transform.cpp  Transform.h  component.h  transform.cpp  transform.h
HorizonEngine/src/HorizonEngine/Core/: App.cpp  Core.h  KeyboardCodes.hpp  LayerStack.cpp  MouseCodes.hpp  TimeStep.h  Window.cpp
HorizonEngine/src/HorizonEngine/Events/: ApplicataionEvent.h  ApplicataionEvent.hpp  ApplicationEvent.h  Event.h  Event.hpp  KeyEvent.h  KeyEvent.hpp  MouseEvent.h  MouseEvent.hpp
HorizonEngine/src/HorizonEngine/File Management/: FileManager.cpp  FileManager.h  ProjectFile.cpp  ProjectFile.h
HorizonEngine/src/HorizonEngine/FileManagement/: Project.cpp  Project.h  ProjectFile.cpp  ProjectFile.h  ProjectManager.cpp  ProjectManager.h  projectManager.h
HorizonEngine/src/HorizonEngine/GraphEditor/: GraphEditor.cpp  GraphEditor.h  ImApp.h
HorizonEngine/src/HorizonEngine/ImGui/: ImguiLayer.cpp  ImguiLayer.h
HorizonEngine/src/HorizonEngine/ImNodes/: imnodes.cpp  imnodes.h  imnodes_internal.h
HorizonEngine/src/HorizonEngine/Logging/: LogMessage.cpp  LogMessage.h  Logging.cpp  Logging.h
HorizonEngine/src/HorizonEngine/Physics2D/: BodyType.h  BoxCollider2D.cpp  BoxCollider2D.h  Collider2D.h  ColliderType.h  ContactListener.cpp  ContactListener.h  Physics2DContactListener.h  Physics2DData.cpp  Physics2DData.h  Physics2DManager.cpp  Physics2DManager.h  (+6 more)
HorizonEngine/tests/: SampleTest.cpp  SampleTest2.cpp
HorizonGame/: CMakeLists.txt
HorizonGame/ScriptCoreLib/Source/: InternalCalls.cs
HorizonGame/assets/scenes/: Level2.scene  _Level2.scene
HorizonGame/include/: GameLayer.h
HorizonGame/src/: GameLayer.cpp  Main.cpp
HznApplication/: CMakeLists.txt  HznApp.cpp  HznApp.h  Sandbox.cpp  Sandbox.h  input.txt
HznApplication/assets/: input.txt
HznApplication/assets/scenes/: input.txt
HznApplication/assets/shaders/: GridFragment.glsl  GridVertex.glsl  TextureFragment.glsl  TextureVertex.glsl  Vertex.glsl
HznApplication/panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h
HznApplication/tests/: AnotherTest.cpp  AnotherTest2.cpp
(+93 files in other folders)
